--- a/css/Left.css
+++ b/css/Left.css
@@ -155,6 +155,7 @@
 	border			: 1px solid #216778;
 	border-bottom	: 0px;
 	padding			: 2px;
+	overflow		: auto;
 }
 
 #Main #Left #Rooms .Room .MessageList li {
