--- a/css/Challenge.css
+++ b/css/Challenge.css
@@ -1,7 +1,17 @@
+/**
+* Challenge Window
+*/
+#ChallengeDiv {
+	padding			: 0px 28px;
+}
 
-/***
- * Janela de desafio
- */
+#ChallengeDiv h3 {
+	font 			: bold 4mm Trebuchet MS;
+	color			: #216778;
+	text-align		: center;
+	padding-top		: 8px;
+}
+
 #ChallengeDiv #ChalLeftDiv {
 	float			: left;
 	width			: 170px;
@@ -41,40 +51,14 @@
 	margin-right	: 1.5mm;
 }
 
-#ChallengeDiv .button65 {
-//	background		: url('../images/button65.png') no-repeat;
-	margin-right	: 3mm;
-}
-
-#ChallengeDiv .button90 {
-	margin-right	: 5mm;
-//	background		: url('../images/button90.png') no-repeat;
-}
-
 #ChallengeDiv .italic {
-		font-style		: italic;
+	font-style		: italic;
 }
 
-#ChallengeDiv .invite {
-	position	:	relative;
-	left			:	18mm;
-}
-
-#ChallengeDiv .offer {
-	position	:	relative;
-	left			:	2mm;
-}
-
-#ChallengeDiv h3 {
-	font 				: bold 7mm Trebuchet MS;
-	color				: #216778;
-	text-align	: center;
-	position		:	relative;
-	left				:	-22px;
-}
-
-#ChallengeDiv {
-	padding-left			: 28px;
+#ChallengeDiv #ButtonsDiv {
+	text-align		: center;
+	padding-top		: 8mm;
+	margin-bottom	: 3mm;
 }
 
 #ChallengeDiv input,
