Create Room Window

--- a/css/Window.css
+++ b/css/Window.css
@@ -59,6 +59,7 @@
 	position	: relative;
 }
 
+#WindowBox .button,
 #WindowBox .button65,
 #WindowBox .button90 {
 	padding-bottom	: 5px;
@@ -76,4 +77,17 @@
 #WindowBox .button65:hover, 
 #WindowBox .button90:hover {
 	background			: #FFA200;
+}
+
+#WindowBox p {
+	font 			: bold 12px Trebuchet MS;
+	color			: #216778;
+}
+
+#WindowBox input,
+#WindowBox textarea,
+#WindowBox select {
+	font 			: 12px Trebuchet MS;
+	border			: 1px solid #216778;
+	color			: #216778;
 }
