--- a/css/Board.css
+++ b/css/Board.css
@@ -3,16 +3,10 @@
 */
 #GameDiv
 {
-	position		: absolute;
-	/*
-	border-style		: solid;
-	border-color		: #216778;
-	border-width		: 1mm;
-	/*width			: 135mm;*/
-
-	left			: 30mm;
-
 	display			: table;
+	position		: relative;
+	left			: 50%;
+	margin			: 35px 0px 0px -260px;
 }
 
 /**
@@ -22,6 +16,8 @@
 #TBoard{
 	position		: relative;
 	float			: left;
+	border			: 3px solid #216778;
+	border-right	: 0px;
 }
 
 #Board {
@@ -29,10 +25,6 @@
 
 	height			: 80.5mm;
 	width			: 80.5mm;
-
-	border-style		: solid;
-	border-width		: 1mm;
-	border-color		: #216778;
 
 	display			: table;
 }
@@ -87,6 +79,8 @@
 	top			: 80mm;
 	*/
 	left			: 1mm;
+	position		: absolute;
+	width			: 81mm;
 }
 
 #IndexH li {
@@ -110,16 +104,10 @@
 #GameInfoDiv
 {
 	position		: relative;
-
 	width			: 195px;
 	height			: 304px;
-
 	float			: left;
-
-	border-style		: solid;
-	border-width		: 1mm;
-	border-color		: #216778;
-
+	border			: 3px solid #216778;
 }
 
 #PhotoDiv
@@ -404,6 +392,7 @@
 	height			: 4.7mm;
 
 	text-align		: center;
+	cursor			: pointer;
 }
 
 #InfoTab2
@@ -420,6 +409,7 @@
 	height			: 4.7mm;
 
 	text-align		: center;
+	cursor			: pointer;
 }
 
 #InfoTab1.active, #InfoTab2.active
