--- a/css/TopMenus.css
+++ b/css/TopMenus.css
@@ -1,4 +1,5 @@
-#Page #RoomMenuDiv {
+#Page #RoomMenuDiv,
+#Page #GameRoomMenuDiv {
 	position		: absolute;
 	right			: 26mm;
 	top 			: 19.9mm;
@@ -10,19 +11,27 @@
 	padding			: 1mm;
 }
 
-#Page #RoomMenuDiv p {
+#Page #GameRoomMenuDiv {
+	width			: 41.5mm;
+	right			: 90.75mm;
+}
+
+#Page #RoomMenuDiv p,
+#Page #GameRoomMenuDiv p {
 	font			: italic 12px Trebuchet MS;
 	color			: #216778;
 	cursor			: pointer;
 }
 
-#Page #RoomMenuDiv ul {
+#Page #RoomMenuDiv ul,
+#Page #GameRoomMenuDiv ul {
 	height			: 22.5mm;
 	list-style		: none;
 	overflow		: auto;
 }
 
-#Page #RoomMenuDiv li {
+#Page #RoomMenuDiv li,
+#Page #GameRoomMenuDiv li {
 	font			: 11px Trebuchet MS;
 	color			: #216778;
 	margin-top		: 3px;
@@ -30,6 +39,8 @@
 }
 
 #Page #RoomMenuDiv li:hover,
-#Page #RoomMenuDiv p:hover {
+#Page #RoomMenuDiv p:hover,
+#Page #GameRoomMenuDiv li:hover,
+#Page #GameRoomMenuDiv p:hover {
 	background-color: #EAF4F5;
 }
