FIX: move compability(?) with IE6

--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -26,11 +26,13 @@
 	height			: 33mm;
 	padding-bottom	: 1mm;
 	overflow		: auto;
-	width			: 100%;
+	width			: 48mm;
 }
 
 #Main #Left #Contact #Contacts table {
 	border-spacing	: 0px;
+	width			: 44mm;
+	.width			: 43.5mm;
 }
 
 #Main #Left #Contact label {
@@ -51,10 +53,12 @@
 
 #Main #Left #Contact td {
 	width			: 31mm;
+	text-align		: left;
 }
 
 #Main #Left #Contact .rating {
 	width			: 2mm;
+	text-align		: right;
 }
 
 
