--- a/css/Left.css
+++ b/css/Left.css
@@ -10,11 +10,15 @@
 	border			: 2px solid #216778;
 	background-color: #FFF;
 	display			: table;
+	height			: 15mm;	
+	.margin-left		: 0.5mm;
+	.margin-top		: 0.5mm;
 }
 
 #Main #Left #User img {
 	float			: left;
 	margin			: 1mm;
+	.margin			: 0.5mm;
 }
 
 #Main #Left #User #UserInf {
