--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -218,17 +218,23 @@
 */
 
 #InviteDiv {
-	padding-top	:	10px;
+	padding-top	:	30px;
 }
 
 #InviteDiv #TextDiv span {
-	font-size 	: 15px;
-	font-weight	:	bold;
+	font-size 	: 11px;
+	font-weight	:	normal;
 	color				: #216778;
 }
 
+#InviteDiv #TextDiv .username {
+	font-size 	: 13px;
+	font-weight	:	bold;
+}
+
 #InviteDiv #ButtonsDiv {
-	padding-top : 20px;
+	padding-top : 30px;
+	padding-bottom : 5px;
 	text-align	: center;
 	position		: relative;
 }
