--- a/css/Board.css
+++ b/css/Board.css
@@ -113,16 +113,9 @@
 #PhotoDiv
 {
 	position		: relative;
-
 	width			: 53mm;
 	height			: 30mm;
-/*
-	border-style		: solid;
-	border-width		: 1px;
-	border-color		: #216778;
-*/
 	font			: 14px Trebuchet MS;
-	font-weight		: bold;		
 	color			: #216778;
 }
 
@@ -275,6 +268,7 @@
 
 #MoveListDiv{
 	position		: relative;
+	overflow		: auto;
 }
 
 #MoveList{
