--- a/css/Board.css
+++ b/css/Board.css
@@ -90,11 +90,7 @@
 	color			: #216778;
 	width			: 38px;
 	height			: 38px;
-
 	text-align		: center;
-	/*
-	line-height		: 38px;
-	*/
 }
 
 /*
@@ -108,6 +104,19 @@
 	height			: 304px;
 	float			: left;
 	border			: 3px solid #216778;
+}
+
+#GameClose {
+	position		: absolute;
+	right			: -3px;
+	top				: -5mm;
+	width			: 4mm;
+	font			: bold 10px Trebuchet MS;
+	text-align		: center;
+	background-color: #216778;
+	color			: #FFF;
+	padding			: 2px;
+	cursor			: pointer;
 }
 
 #PhotoDiv
@@ -126,10 +135,8 @@
 	position		: absolute;
 	left			: 8mm;
 	top			: 5mm;
-
 	width			: 12mm;
 	height			: 15mm;
-
 	border-style		: solid;
 	border-width		: 1px;
 }
