--- a/css/Window.css
+++ b/css/Window.css
@@ -93,3 +93,64 @@
 #WindowBox span {
 	font-family		: Trebuchet MS;
 }
+
+#AlertDiv #TextDiv {
+	padding-top		:	30px;
+	position			:	relative;
+	text-align		: center;
+}
+
+#GameAlertDiv #TextDiv {
+	padding-top		:	30px;
+	position			:	relative;
+	text-align		: center;
+}
+
+#AlertDiv #TextDiv p,
+#GameAlertDiv #TextDiv p {
+	color				: #216778;
+	font-size		:	14px;
+}
+
+#AlertDiv #ButtonsDiv,
+#GameAlertDiv #ButtonsDiv {
+	position		:	relative;
+	padding-top	: 40px;
+	padding-bottom	: 5px;
+	text-align	: center;
+	
+}
+
+#ConfirmDiv,
+#GameConfirmDiv {
+	padding-top	:	10px;
+	text-align	: center;
+	position		: relative;
+}
+
+#ConfirmDiv #TextDiv,
+#GameConfirmDiv #TextDiv {
+	padding-top		:	30px;
+	position			:	relative;
+	text-align		: center;
+}
+
+#ConfirmDiv #TextDiv p,
+#GameConfirmDiv #TextDiv p {
+	font-size 	: 12px;
+	font-weight	:	bold;
+	color				: #216778;
+}
+
+#ConfirmDiv #ButtonsDiv,
+#GameConfirmDiv #ButtonsDiv {
+	position		:	relative;
+	padding-top	: 40px;
+	padding-bottom	: 25px;
+	text-align	: center;
+}
+
+#ConfirmDiv #ButtonsDiv .button,
+#GameConfirmDiv #ButtonsDiv .button {
+	bottom			:	5px;
+}
