--- a/css/Window.css
+++ b/css/Window.css
@@ -100,20 +100,12 @@
 	text-align		: center;
 }
 
-#GameAlertDiv #TextDiv {
-	padding-top		:	30px;
-	position			:	relative;
-	text-align		: center;
-}
-
-#AlertDiv #TextDiv p,
-#GameAlertDiv #TextDiv p {
+#AlertDiv #TextDiv p {
 	color				: #216778;
 	font-size		:	14px;
 }
 
-#AlertDiv #ButtonsDiv,
-#GameAlertDiv #ButtonsDiv {
+#AlertDiv #ButtonsDiv {
 	position		:	relative;
 	padding-top	: 40px;
 	padding-bottom	: 5px;
@@ -121,36 +113,31 @@
 	
 }
 
-#ConfirmDiv,
-#GameConfirmDiv {
+#ConfirmDiv {
 	padding-top	:	10px;
 	text-align	: center;
 	position		: relative;
 }
 
-#ConfirmDiv #TextDiv,
-#GameConfirmDiv #TextDiv {
+#ConfirmDiv #TextDiv {,
 	padding-top		:	30px;
 	position			:	relative;
 	text-align		: center;
 }
 
-#ConfirmDiv #TextDiv p,
-#GameConfirmDiv #TextDiv p {
+#ConfirmDiv #TextDiv p {
 	font-size 	: 12px;
 	font-weight	:	bold;
 	color				: #216778;
 }
 
-#ConfirmDiv #ButtonsDiv,
-#GameConfirmDiv #ButtonsDiv {
+#ConfirmDiv #ButtonsDiv {
 	position		:	relative;
 	padding-top	: 40px;
 	padding-bottom	: 25px;
 	text-align	: center;
 }
 
-#ConfirmDiv #ButtonsDiv .button,
-#GameConfirmDiv #ButtonsDiv .button {
+#ConfirmDiv #ButtonsDiv .button {
 	bottom			:	5px;
 }
