--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -193,6 +193,7 @@
 	text-decoration	: none;
 	font			: bold 11px Trebuchet MS;
 	color			: #216778;
+	cursor		:	pointer;
 }
 
 /**
@@ -255,7 +256,6 @@
 
 #SearchUserDiv span {
 	padding-top	:	20px;
-	cursor			:	pointer;
 	margin-right: 10px;
 	font-size 	: 13px;
 	margin-right: 10px;
@@ -269,13 +269,19 @@
 	color				: #216778;
 }
 
-#SearchUserDiv .option {
-	color				: #216778;
+#SearchUserDiv td {
+	padding-left	:	10px;
+	width					:	130px;
 }
 
-#SearchUserDiv .option_marked {
-	color: #FFA200;
-	border-bottom	:	2px solid #FFA200;
+#SearchUserDiv td:hover {
+	background-color	: #EAF5F4;
+	border			: 1px solid #216778;
+}
+
+#SearchUserDiv .option {
+	color				: #216778;
+	border-bottom	:	2px solid #216778;
 }
 
 #SearchUserDiv .no_found {
@@ -288,11 +294,11 @@
 
 #SearchUserDiv #ListDiv {
 	text-align 	:	left;
-	padding-left	:	22px;
-	width					:	140px;
+	padding-left	:	12px;
+	width					:	150px;
 	display				:	block;
 	overflow			:	auto;
-	height				:	45px;
+	height				:	58px;
 	margin-top		:	15px
 }
 
@@ -306,7 +312,6 @@
 
 #SearchUserDiv #ButtonsDiv {
 	padding-top : 30px;
-	padding-bottom : 5px;
 	padding-right	:	10px;
 	text-align	: center;
 	position		: relative;
