Fixed: Top menu position

--- a/css/Top.css
+++ b/css/Top.css
@@ -81,7 +81,7 @@
 }
 
 #Top .menu li {
-	font			: bold 14px Trebuchet MS;
+	font			: bold 3.5mm Trebuchet MS;
 	color			: #216778;
 	border-right	: 1px solid #216778;
 	padding			: 0mm 5mm;
