--- a/css/Board.css
+++ b/css/Board.css
@@ -286,6 +286,10 @@
 	list-style		: none;
 }
 
+#MoveList .oldgame{
+	height			: 22mm;
+}
+
 #MoveList .black{
 	background-color	: #216778;
 	color			: #FFF;
@@ -294,6 +298,27 @@
 #MoveList span{
 	margin-left		: 3mm;
 }
+
+#MoveListDiv #MoveListButtons{
+	position                : absolute;
+	bottom                  : 0px;
+
+	background-color        : #FFF;
+
+	display                 : table;
+	width                   : 46mm;
+	height                  : 8mm;
+
+	border-style            : solid;
+	border-width            : 1px 0px 0px 0px;
+}
+
+#MoveListDiv #MoveListButtons input{
+	float                   : left;
+	margin-left             : 4mm;
+	margin-top              : 1mm;
+}
+
 
 #GameOptionDiv ul
 {
@@ -426,4 +451,8 @@
 	border-color		: #ffa200;
 
 	color		: #ffa200;
+}
+
+#InfoTab1.oldgame{
+	width			: 46mm;
 }
