--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -101,6 +101,11 @@
 	overflow		: auto;
 }
 
+#Main #Left #Rooms .Room tbody {
+	display			: block;
+	width			: 44mm;
+}
+
 #Main #Left #Rooms .Room #RoomUsers ul {
 	padding-bottom	: 1mm;
 	border-bottom	: 1px solid #FFA200;
@@ -121,11 +126,13 @@
 }
 
 #Main #Left #Rooms td {
-	width			: 31mm;
+	width			: 41mm;
+	text-align		: left;
 }
 
 #Main #Left #Rooms .rating {
 	width			: 2mm;
+	text-align		: right;
 }
 
 #Main #Left #Rooms hr {
