Fixed exit games rooms.

--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -179,8 +179,7 @@
 	position		: absolute;
 	left			: 54mm;
 	top				: 50mm;
-	width			: 35mm;
-	height			: 39mm;
+//	width			: 35mm;
 	border			: 1px solid #216778;
 	background-color: #FFF;
 }
