--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -179,9 +179,11 @@
 	position		: absolute;
 	left			: 54mm;
 	top				: 50mm;
-//	width			: 35mm;
+	width			: 39mm;
+	height			: 39mm;
 	border			: 1px solid #216778;
 	background-color: #FFF;
+	overflow		: auto;
 }
 
 #Main #Left #Rooms .Room #EmoticonList li {
