--- a/css/Profile.css
+++ b/css/Profile.css
@@ -105,6 +105,7 @@
 	text-align		: center;
 }
 
+#ProfileConfirmDiv p,
 #ProfileDiv p {
 	font 			: bold 12px Trebuchet MS;
 	color			: #216778;
@@ -168,3 +169,34 @@
 	width						: 120px;
 }
 
+
+#ProfileConfirmDiv {
+	padding-top	:	10px;
+	text-align	: center;
+	position		: relative;
+}
+
+#ProfileConfirmDiv #TextDiv {
+	padding-top		:	20px;
+	padding-left	:	38px;
+	position			:	relative;
+	text-align		: center;
+	width					:	300px;
+}
+
+#ProfileConfirmDiv #ButtonsDiv {
+	position		:	relative;
+	padding-top	: 40px;
+	padding-bottom	: 20px;
+	text-align	: center;
+}
+
+#ProfileConfirmDiv #ButtonsDiv .button_big {
+	bottom			:	5px;
+}
+
+#ProfileConfirmDiv p {
+	font 			: bold 14px Trebuchet MS;
+	color			: #216778;
+	margin-top		: 3mm;
+}
