--- a/css/Register.css
+++ b/css/Register.css
@@ -4,14 +4,14 @@ body {
 
 #MainDiv {
 	background		:transparent url(../images/register/register_box_fundo.png) repeat-x scroll 0% 50%;
-	width			:550px;
-	height			:350px;
+	width			:470px;
+	height			:250px;
 	border			:2px solid  #FFA200;
-	padding			:120 0 0 150;
+	padding			:30 0 30 30;
 	position		:relative;
-	top				:80px;
+	top				:50px;
 	left			:50%;
-	margin-left		:-330px;
+	margin-left		:-230px;
 }
 
 #MainDiv p{
@@ -38,10 +38,10 @@ body {
 
 }
 
-b{
+#MainDiv b{
 	width			:150px;
 	font-family		:verdana;
-	font-weight     :normal;
+	font-weight     :bold;
 	font-size		:10px;
 	border          :1px ;
 	float			:left;
@@ -102,3 +102,8 @@ input {
 	left			:150px;
 
 }
+
+#MainDiv .inf{
+	padding           :0 0 20 ;
+}
+
