Fixed: User Image change when save new profile with new image. Game messages to get player image.

--- a/css/Window.css
+++ b/css/Window.css
@@ -129,3 +129,21 @@
 #ConfirmDiv #ButtonsDiv .button {
 	bottom			:	5px;
 }
+
+#ChangeImageDiv #ButtonsDiv{
+	position			: relative;
+	text-align	: center;
+	padding-top		:	25px;
+}
+
+#ChangeImageDiv #TextDiv{
+	padding-top		:	10px;
+	position			:	relative;
+	text-align		: center;
+}
+
+#ChangeImageDiv #ImageForm{
+	position			: relative;
+	text-align	: center;
+	padding-top		:	15px;
+}
