--- a/css/Left.css
+++ b/css/Left.css
@@ -16,6 +16,8 @@
 #Main #Left #User img {
 	float			: left;
 	margin			: 1mm;
+	width			: 50px;
+	height			: 50px;
 }
 
 #Main #Left #User #UserInf {
