--- a/css/Profile.css
+++ b/css/Profile.css
@@ -17,6 +17,11 @@
 	width				:	20mm;
 }
 
+#ProfileDiv #ProfPhotoDiv img{
+	width		: 50px;
+	height		: 50px;
+}
+
 #ProfileDiv #TopRightDiv #TopRight_LeftDiv {
 	width			: 90px;
 	float			:	left;
