Fix : show align rating of online users update profile window

--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -45,7 +45,7 @@
 #Main #Left #Contact tr {
 	text-indent		: 5mm;
 	margin			: 1px 0px;
-	height			: 4.3mm;
+#	height			: 4.3mm;
 	width			: 100%;
 	font			: 11px Trebuchet MS;
 	color			: #000;
