Added: Chinese translation (Alex Zha) Added: Lang attribute in MainData (data.js) Added: lang.xml file config Added: Select others language in Login interface (interface.js, login.js) Changed: Login function with language parameter Added: Language flags image Added: Check browser language - GetLanguage - (utils.js)

--- a/css/Login.css
+++ b/css/Login.css
@@ -128,3 +128,25 @@
 	font-weight		: bold;
 }
 */
+
+
+#LangDiv
+{
+	position		: absolute;
+	left			: 50%;
+	margin-left		: -70px;
+	top			: 40px;
+}
+
+#LangDiv ul
+{
+	list-style		: none;
+	display			: table;
+	width			: 100%;
+}
+
+#LangDiv li
+{
+	float			: left;
+	margin-right		: 10px;
+}
