--- a/css/Challenge.css
+++ b/css/Challenge.css
@@ -15,6 +15,7 @@
 #ChallengeDiv #ChalLeftDiv {
 	float			: left;
 	width			: 170px;
+	margin-left	:	13px;
 }
 
 #ChallengeDiv p {
@@ -38,10 +39,9 @@
 	margin			: 0;
 	font-size		: 2.6mm;
 	position		: relative;
-	left				:	-12px;
 }
 
-#ChallengeDiv .time_select {
+#ChallengeDiv .drop_select {
 	margin-top		: 1mm;
 	margin-right	: 2mm;
 }
