Added: New logo "XadrezLivre" (logo.png, Top.css); Fixed: When leave interface, close all windows; Fixed: Open just one old game search window;

--- a/css/Top.css
+++ b/css/Top.css
@@ -7,8 +7,8 @@
 	float			: left;
 	margin			: 1mm;
 	width			: 213px;
-	height			: 71px;
-	background		: url('../images/logochessd.png') no-repeat;
+	height			: 91px;
+	background		: url('../images/logo.png') no-repeat;
 	text-indent		: -9999px;
 	overflow		: hidden;
 
