--- a/css/Challenge.css
+++ b/css/Challenge.css
@@ -5,6 +5,24 @@
 	padding			: 0px 28px;
 }
 
+#ChallengeDiv #TopDiv {
+	padding-top		:	2mm;
+	margin-bottom	:	3mm;
+}
+
+#ChallengeDiv #Layer1Div {
+	margin-bottom	:	12mm;
+}
+
+#ChallengeDiv #Layer3Div {
+	text-align	:	center;
+}
+
+#ChallengeDiv .cx {
+	font-size	:	10px;
+	margin-right	:	3mm;
+}
+
 #ChallengeDiv h3 {
 	font 			: bold 4mm Trebuchet MS;
 	color			: #216778;
@@ -12,14 +30,14 @@
 	padding-top		: 8px;
 }
 
-#ChallengeDiv #ChalLeftDiv {
+#ChallengeDiv .leftDiv {
 	float			: left;
 	width			: 170px;
 	margin-left	:	13px;
 }
 
 #ChallengeDiv p {
-	margin-top		: 5mm;
+	margin-top		: 0mm;
 	font 			: bold 12px Trebuchet MS;
 	color			: #216778;
 }
@@ -39,6 +57,7 @@
 	margin			: 0;
 	font-size		: 2.6mm;
 	position		: relative;
+	width				:	300px;
 }
 
 #ChallengeDiv .drop_select {
@@ -47,7 +66,7 @@
 }
 
 #ChallengeDiv .rating_radio {
-	margin-top		: 8mm;
+	margin-top		: 3mm;
 	margin-right	: 1.5mm;
 }
 
@@ -58,7 +77,15 @@
 #ChallengeDiv #ButtonsDiv {
 	text-align		: center;
 	padding-top		: 8mm;
-	margin-bottom	: 3mm;
+	margin-bottom	: 2mm;
+}
+
+#ChallengeDiv .color {
+	padding-top	:	1mm;
+}
+
+#ChallengeDiv .radio {
+	margin-top	:	2mm;
 }
 
 #ChallengeDiv input,
