Change language flags to text.

--- a/css/Login.css
+++ b/css/Login.css
@@ -150,4 +150,10 @@
 	cursor			: pointer;
 	float			: left;
 	margin-right	: 10px;
+	font			: bold 11px Trebuchet MS;
+	color			: #216778;
+}
+
+#LangDiv li:hover {
+	text-decoration	: underline;
 }
