Changed: Login.css, Main.css: Text elements cursor to default;

--- a/css/Login.css
+++ b/css/Login.css
@@ -149,9 +149,14 @@
 {
 	cursor			: pointer;
 	float			: left;
-	margin-right	: 10px;
+	margin-right		: 10px;
 	font			: bold 11px Trebuchet MS;
 	color			: #216778;
+}
+
+#LangDiv li span
+{
+	cursor			: pointer;
 }
 
 #LangDiv li:hover {
