--- a/css/Main.css
+++ b/css/Main.css
@@ -7,6 +7,10 @@ body {
 	background		: url('../images/fundo_interface.png') repeat-X;
 }
 
+p, a, h1, h2, h3, h4, h5, h6, span, strong{
+	cursor			: default;
+}
+
 #Page {
 	position		: relative;
 	min-width		: 780px;
